--- a/src/components/sections/shared/Testimonials.astro
+++ b/src/components/sections/shared/Testimonials.astro
@@ -1,4 +1,5 @@
 ---
+import SectionContainer from './SectionContainer.astro';
 import TestimonialCard from '@/components/ui/cards/TestimonialCard.astro';
 // Image Imports
 
@@ -49,27 +50,18 @@ const {
 } = Astro.props as Props;
 ---
 
-<section>
-	<div class="content-container">
-		<div class="section-title">
-			<h2
-				class="text-primary-500"
-				set:html={title}
-			/>
-			<p
-				class="subtitle"
-				set:html={subtitle}
-			/>
-		</div>
-		<div class="portfolio-card-group flex flex-wrap gap-5">
-			{
-				testimonials.map((testimonial) => (
-					<TestimonialCard
-						client={testimonial.client}
-						review={testimonial.review}
-					/>
-				))
-			}
-		</div>
+<SectionContainer
+	title="Reviews"
+	subtitle="Trusted by industry leaders to take their businesses to the next level"
+>
+	<div class="portfolio-card-group flex flex-wrap gap-5">
+		{
+			testimonials.map((testimonial) => (
+				<TestimonialCard
+					client={testimonial.client}
+					review={testimonial.review}
+				/>
+			))
+		}
 	</div>
-</section>
+</SectionContainer>
