--- a/src/components/ui/cards/PortfolioCard.astro
+++ b/src/components/ui/cards/PortfolioCard.astro
@@ -1,17 +1,40 @@
 ---
+import { Image } from 'astro:assets';
 interface Props {
 	title: string;
 	description: string;
 	image: ImageMetadata;
 	href: string;
+	class: string;
 }
-const { title, description, image, href } = Astro.props as Props;
+const {
+	title,
+	description,
+	image,
+	href,
+	class: className,
+} = Astro.props as Props;
 ---
 
-<article>
-	<a href={href}>
-		<h3 set:html={title} />
-		<p set:html={description} />
-		<p>Visit Website</p>
+<article class={className}>
+	<a
+		href={href}
+		class="w-full h-full"
+	>
+		<div class="flex flex-col gap-6">
+			<Image
+				src={image}
+				alt={`${title} preview`}
+				<h3
+				set:html={title}
+			/>
+			<div class="flex flex-col gap-10">
+				<p
+					class="text-gray-200 wsl-text-sm"
+					set:html={description}
+				/>
+				<p class="text-primary-500 font-semibold wsl-text-sm">Visit Website</p>
+			</div>
+		</div>
 	</a>
 </article>
