--- a/src/components/ui/cards/PortfolioCard.astro
+++ b/src/components/ui/cards/PortfolioCard.astro
@@ -30,10 +30,10 @@ const {
 			/>
 			<div class="flex flex-col gap-10">
 				<p
-					class="text-gray-200 wsl-text-sm"
+					class="text-gray-200 text-sm"
 					set:html={description}
 				/>
-				<p class="text-primary-500 font-semibold wsl-text-sm">Visit Website</p>
+				<p class="text-primary-500 font-semibold text-sm">Visit Website</p>
 			</div>
 		</div>
 	</a>
