add animations to cards

--- a/src/components/sections/shared/Portfolio.astro
+++ b/src/components/sections/shared/Portfolio.astro
@@ -3,7 +3,7 @@ import SectionContainer from './SectionContainer.astro';
 import PortfolioCard from '@/components/ui/cards/PortfolioCard.astro';
 // Image Imports
 
-import placeHolderImage from '@/assets/worksiteleads-logo.png';
+import placeHolderImage from '@/assets/tmp.avif';
 
 type Project = {
 	title: string;
