--- a/src/components/ui/cards/PortfolioCard.astro
+++ b/src/components/ui/cards/PortfolioCard.astro
@@ -16,24 +16,33 @@ const {
 } = Astro.props as Props;
 ---
 
-<article class={className}>
+<article class={`group hover ${className}`}>
 	<a
 		href={href}
 		class="w-full h-full"
 	>
-		<div class="flex flex-col gap-6">
-			<Image
-				src={image}
-				alt={`${title} preview`}
-				<h3
-				set:html={title}
-			/>
-			<div class="flex flex-col gap-10">
-				<p
-					class="text-gray-200 text-sm"
-					set:html={description}
+		<div class="flex flex-col gap-2 h-full">
+			<div
+				class="image-container transition-transform duration-800 ease-out group-hover:scale-108"
+			>
+				<Image
+					src={image}
+					alt={`${title} preview`}
 				/>
-				<p class="text-primary-500 font-semibold text-sm">Visit Website</p>
+			</div>
+
+			<div class="flex flex-col gap-10 flex-1">
+				<div class="flex flex-col gap-2 flex-1">
+					<h3
+						class="text-gray-200 wsl-text-lg"
+						set:html={title}
+					/>
+					<p
+						class="text-gray-200 text-sm"
+						set:html={description}
+					/>
+				</div>
+				<p class="text-primary-500 !font-bold text-sm">Visit Website</p>
 			</div>
 		</div>
 	</a>
