--- a/src/components/sections/shared/Testimonials.astro
+++ b/src/components/sections/shared/Testimonials.astro
@@ -63,7 +63,7 @@ const {
 				<TestimonialCard
 					client={testimonial.client}
 					review={testimonial.review}
-					class={`grow w-full min-w-[280px] lg:max-w-[30%]`}
+					class={`grow w-full min-w-[280px] max-w-[600px] lg:max-w-[45%] xl:max-w-[30%]`}
 				/>
 			))
 		}
