--- a/src/components/ui/pills/Pill.astro
+++ b/src/components/ui/pills/Pill.astro
@@ -3,7 +3,7 @@ const { hasIcon = true, text = 'placeholder text' } = Astro.props;
 ---
 
 <div
-	class="flex items-center bg-white/10 backdrop-blur-sm rounded-full px-4 py-2"
+	class="flex items-center bg-white/10 backdrop-blur-sm rounded-full px-4 py-2 w-full"
 >
 	{
 		hasIcon && (
