add contact info

--- a/src/components/sections/shared/Testimonials.astro
+++ b/src/components/sections/shared/Testimonials.astro
@@ -11,7 +11,7 @@ type Testimonial = {
 
 const testimonials: Testimonial[] = [
 	{
-		client: 'Client Name',
+		client: 'Company Name',
 		review:
 			'Testimonial quote testimonial quote testimonial quote testimonial quote testimonial quote testimonial quote testimonial quote testimonial quote testimonial quote ',
 	},
