--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ interface Props {
 
 const {
 	title = 'Worksite Leads',
-	description = 'Your description',
+	description = 'Digital Agency servicing blue collar works within Canada and the United States.',
 	hasHero = false,
 } = Astro.props;
 ---
