--- a/src/components/ui/pills/Pill.astro
+++ b/src/components/ui/pills/Pill.astro
@@ -1,9 +1,14 @@
 ---
-const { hasIcon = true, text = 'placeholder text' } = Astro.props;
+interface Props {
+	hasIcon?: boolean;
+	text: string;
+}
+
+const { hasIcon = true, text = 'placeholder text' } = Astro.props as Props;
 ---
 
 <div
-	class="flex items-center bg-white/10 backdrop-blur-sm rounded-full px-4 py-2 w-full sm:w-fit"
+	class={`flex items-center bg-white/10 backdrop-blur-sm rounded-full px-4 py-2 w-full sm:w-fit`}
 >
 	{
 		hasIcon && (
@@ -20,5 +25,8 @@ const { hasIcon = true, text = 'placeholder text' } = Astro.props;
 			</svg>
 		)
 	}
-	<span class="text-white text-sm font-medium">{text}</span>
+	<span
+		class="text-white text-sm font-medium"
+		set:html={text}
+	/>
 </div>
