update spacing and layout of contact elements

--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -46,7 +46,7 @@ const companyInfo = [
 const { footerText } = Astro.props;
 ---
 
-<footer class="bg-gray-700 pb-2 lg:pt-10">
+<footer class="bg-gray-700 pb-2 pt-5 lg:pt-10">
 	<div
 		class:list={[
 			'max-w-[var(--content-width-xl)] mx-auto flex flex-col gap-8 pt-9 px-4',
