--- a/src/components/sections/shared/SubPageHero.astro
+++ b/src/components/sections/shared/SubPageHero.astro
@@ -6,8 +6,9 @@ import Pill from '@/components/ui/pills/Pill.astro';
 import Button from '@/components/ui/buttons/Button.astro';
 
 interface Props {
-	title?: string;
 	eyebrow?: string;
+	title?: string;
+	description?: string;
 	bodyText?: string;
 	listItems?: string[];
 }
@@ -15,8 +16,7 @@ interface Props {
 const {
 	title = 'Sub-Page Title',
 	eyebrow = 'Eyebrow Text',
-	bodyText = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.',
-	listItems,
+	description = 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.',
 } = Astro.props;
 ---
 
@@ -38,9 +38,13 @@ const {
 	</div>
 
 	<!-- Content Container -->
-	<div class="content-container relative z-10 min-h-screen flex items-start">
+	<div
+		class="content-container relative z-10 min-h-screen flex flex-col gap-10 items-center md:flex-row md:flex-start"
+	>
 		<!-- Main Content Area -->
-		<div class="flex flex-col gap-5 lg:max-w-[45%] pt-40">
+		<div
+			class="flex flex-col gap-5 justify-center md:max-w-[45%] pt-28 md:pt-32 lg:pt-20"
+		>
 			<div class="flex flex-col">
 				<span
 					class="text-primary-500 wsl-text-lg font-extrabold font-montserrat capitalize"
@@ -54,15 +58,15 @@ const {
 			</div>
 			<div class="flex flex-col gap-10">
 				<p
-					class="text-gray-200"
-					set:html={bodyText}
+					class="text-gray-100"
+					set:html={description}
 				/>
 				<slot name="list-items" />
 			</div>
 		</div>
 
 		<!-- Form Section  -->
-		<div class="px-4 sm:px-6 lg:px-8 pb-20 lg:max-w-[45%] pt-40">
+		<div class="pb-10 lg:pb-20 w-full md:max-w-[45%] md:pt-32 lg:pt-20">
 			<slot name="form" />
 		</div>
 	</div>
