--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -29,14 +29,13 @@ const contactInfo: Contact[] = [
 
 <Layout
 	hasHero={true}
-	title="Contact Page - Worksite Leads"
-	description="Contact us with any questions or general inquiries."
+	title="Schedule a Call - Worksite Leads"
+	description="Schedule a call with our team to discover how we can help your business grow."
 >
 	<SubPageHero
-		eyebrow="Got Questions?"
-		title="Contact Us"
-		description="We are dedicated to providing exceptional support to ensure your experience with our products & services is seamless. <br><br>Our support team is here to assist you with any queries or issues you may encounter."
-		listItems={['+1 (123) - 1234', 'contact@worksiteleads.com', '24/7']}
+		eyebrow="Ready to Start?"
+		title="Schedule a Call"
+		description="Hop on a quick & easy, no risks, no obligations call with us to see how we can help."
 	>
 		<div
 			slot="list-items"
@@ -63,7 +62,17 @@ const contactInfo: Contact[] = [
 			slot="form"
 			class="w-full h-[300px] bg-gray-200 rounded-lg p-4"
 		>
-			FORM
+			<iframe
+				src="https://api.leadconnectorhq.com/widget/booking/wVqUyNTRTAkNiRa1bPTA"
+				style="width: 100%;border:none;overflow: hidden;"
+				scrolling="no"
+				id="2YLsJZYrXQYyjn9CfuDB_1752561372942"
+			></iframe>
 		</div>
 	</SubPageHero>
 </Layout>
+
+<script
+	src="https://link.msgsndr.com/js/form_embed.js"
+	type="text/javascript"
+></script>
