add fluid y-padding to content container

--- a/src/components/sections/shared/SectionContainer.astro
+++ b/src/components/sections/shared/SectionContainer.astro
@@ -21,7 +21,7 @@ const headerAlignment =
 	centerHeader === false ? 'text-left md:text-center' : 'text-center';
 ---
 
-<section class={`px-4 py-9 ${backgroundColor}`}>
+<section class={`${backgroundColor}`}>
 	<div class="content-container flex flex-col gap-10 lg:gap-10">
 		<!-- Section Header -->
 		<div class={`${headerAlignment} max-w-3xl mx-auto flex flex-col gap-3`}>
