--- a/src/components/sections/shared/SubPageHero.astro
+++ b/src/components/sections/shared/SubPageHero.astro
@@ -36,11 +36,11 @@ const {
 
 	<!-- Content Container -->
 	<div
-		class="content-container relative z-10 min-h-screen flex flex-col gap-10 items-center md:flex-row md:flex-start"
+		class="content-container relative z-10 min-h-screen flex flex-col gap-10 items-center md:flex-row md:flex-start md:justify-center"
 	>
 		<!-- Main Content Area -->
 		<div
-			class="flex flex-col gap-5 justify-center md:max-w-[45%] pt-28 md:pt-32 lg:pt-20"
+			class="flex flex-col gap-5 justify-center md:max-w-[45%] pt-28 md:pt-32 lg:pt-0"
 		>
 			<div class="flex flex-col">
 				<span
