--- a/src/styles/fluid-layouts.css
+++ b/src/styles/fluid-layouts.css
@@ -7,6 +7,7 @@ footer {
 /* Contains the content within 320 - 1440 px */
 .content-container {
 	max-width: var(--content-width-max);
-	padding: clamp(1rem, -0.8571rem + 9.2857vw, 7.5rem);
+	padding: clamp(3.75rem, 1.9643rem + 8.9286vw, 10rem)
+		clamp(1rem, -0.8571rem + 9.2857vw, 7.5rem);
 	margin: 0 auto;
 }
