add contact page sections

--- a/src/components/sections/shared/CTA.astro
+++ b/src/components/sections/shared/CTA.astro
@@ -5,7 +5,7 @@ import CTARocket from '@/assets/cta-rocket.png';
 import Button from '@/components/ui/buttons/Button.astro';
 ---
 
-<section class="w-full py-10 lg:px-10 bg-gray-50">
+<section class="w-full bg-gray-50">
 	<div class="content-container">
 		<div
 			class="content-wrapper px-6 py-8 sm:px-10 sm:py-10 bg-primary-500 rounded-lg md:px-10 lg:px-8 lg:py-12 2xl:px-20 2xl:py-[60px] relative overflow-hidden min-h-[280px] lg:min-h-[320px]"
