--- a/src/components/sections/shared/SubPageHero.astro
+++ b/src/components/sections/shared/SubPageHero.astro
@@ -55,7 +55,7 @@ const {
 			</div>
 			<div class="flex flex-col gap-10">
 				<p
-					class="text-gray-100"
+					class="text-gray-100 wsl-text-lg"
 					set:html={description}
 				/>
 				<slot name="list-items" />
