--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -70,7 +70,7 @@ const { footerText } = Astro.props;
 			<div class="lg:grid lg:grid-cols-[2fr_1fr] lg:gap-12 lg:items-start">
 				<!-- Footer Text -->
 				<div
-					class="wsl-text-sm max-w-[550px] text-gray-300 mb-8 sm:mb-10 lg:mb-0"
+					class="wsl-text-lg max-w-[550px] text-gray-300 mb-8 sm:mb-10 lg:mb-0"
 					set:html={footerText}
 				/>
 
@@ -87,7 +87,7 @@ const { footerText } = Astro.props;
 									<li>
 										<a
 											href={link.href}
-											class="capitalize text-gray-300 hover:text-primary-400 transition-colors"
+											class="capitalize text-gray-300 hover:text-primary-400 transition-colors wsl-text-lg font-semibold whitespace-nowrap"
 										>
 											{link.name}
 										</a>
@@ -103,7 +103,9 @@ const { footerText } = Astro.props;
 						<ul class="flex flex-col gap-1">
 							{
 								companyInfo.map((info) => (
-									<li class="text-gray-300">{info.value}</li>
+									<li class="text-gray-300 wsl-text-lg font-semibold whitespace-nowrap">
+										{info.value}
+									</li>
 								))
 							}
 						</ul>
