refactor: add extra heading level

--- a/src/styles/fluid-typography.css
+++ b/src/styles/fluid-typography.css
@@ -1,10 +1,15 @@
-/* Auto-scales between 28px - 56px */
+/* Auto-scales between 36px - 56px */
 .heading-l1 {
+	font-size: clamp(2.25rem, 1.8929rem + 1.7857vw, var(--text-6xl));
+}
+
+/* Auto-scales between 28px - 56px */
+.heading-l2 {
 	font-size: clamp(var(--text-3xl), 1.25rem + 2.5vw, var(--text-6xl));
 }
 
 /* Auto-scales between 24px - 48px */
-.heading-l2 {
+.heading-l3 {
 	font-size: clamp(var(--text-2xl), 1.0714rem + 2.1429vw, var(--text-5xl));
 }
 
