--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -1,6 +1,12 @@
 ---
+// Layout
 import Layout from '@/layouts/Layout.astro';
+// Sections
 import SubPageHero from '@/components/sections/shared/SubPageHero.astro';
+import Testimonials from '@/components/sections/shared/Testimonials.astro';
+import Portfolio from '@/components/sections/shared/Portfolio.astro';
+import CTA from '@/components/sections/shared/CTA.astro';
+// Components
 import ListItem from '@/components/ui/ListItem.astro';
 
 type Contact = {
@@ -60,7 +66,7 @@ const contactInfo: Contact[] = [
 		</div>
 		<div
 			slot="form"
-			class="w-full h-[300px] bg-gray-200 rounded-lg p-4"
+			class="w-full"
 		>
 			<iframe
 				src="https://api.leadconnectorhq.com/widget/booking/wVqUyNTRTAkNiRa1bPTA"
@@ -70,6 +76,9 @@ const contactInfo: Contact[] = [
 			></iframe>
 		</div>
 	</SubPageHero>
+	<Testimonials />
+	<Portfolio />
+	<CTA />
 </Layout>
 
 <script
