--- a/src/components/sections/shared/CTA.astro
+++ b/src/components/sections/shared/CTA.astro
@@ -8,14 +8,16 @@ import Button from '@/components/ui/buttons/Button.astro';
 <section class="w-full bg-gray-50">
 	<div class="content-container">
 		<div
-			class="content-wrapper px-6 py-8 sm:px-10 sm:py-10 bg-primary-500 rounded-lg md:px-10 lg:px-8 lg:py-12 2xl:px-20 2xl:py-[60px] relative overflow-hidden min-h-[280px] lg:min-h-[320px]"
+			class="content-wrapper px-6 py-8 sm:px-10 sm:py-10 bg-primary-500 rounded-lg md:px-10 lg:px-8 lg:py-12 2xl:px-20 2xl:py-[60px] relative overflow-hidden min-h-[280px] lg:min-h-[320px] xl:min-h-[420]"
 		>
 			<div
 				class="flex flex-col lg:flex-row lg:items-center lg:justify-between h-full"
 			>
-				<div class="left lg:flex-1 md:max-w-[70%] xl:max-w-[55%] z-10 relative">
+				<div
+					class="left lg:flex-1 md:max-w-[70%] xl:max-w-[55%] z-10 relative flex flex-col lg:gap-5"
+				>
 					<div class="flex flex-col gap-3 mb-6">
-						<h2 class="heading-l3 capitalize">
+						<h2 class="heading-l2 capitalize">
 							Turn your website into a sales machine
 						</h2>
 						<p class="wsl-text-lg">
@@ -27,8 +29,8 @@ import Button from '@/components/ui/buttons/Button.astro';
 						text="Schedule a Call"
 						type="button"
 						variation="secondary"
-						href="/schedule-a-call"
-						class="w-fit"
+						href="/schedule-call"
+						class="w-fit md:px-8 md:py-4"
 					/>
 				</div>
 				<div
