update capitaliztion of footer text

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,7 @@ const {
 		</main>
 
 		<Footer
-			footerText="Committed to providing businesses with innovative solutions that - Attract More Clients, Serve Them Better & Keep Them Longer."
+			footerText="Committed to providing businesses with innovative solutions that attract more clients, serve them better & keep them longer."
 		/>
 	</body>
 </html>
