--- a/src/components/ui/buttons/Button.astro
+++ b/src/components/ui/buttons/Button.astro
@@ -30,7 +30,7 @@ const colorClass = type === 'button' && buttonClasses[variation];
 		<a
 			href={href}
 			class:list={[
-				'inline-flex items-center px-4 py-2.5 rounded-sm md:rounded-md',
+				'inline-flex items-center px-4 py-2.5 rounded-sm md:rounded-md md:px-6 md:py-3',
 				'text-black font-semibold wsl-text-lg',
 				'transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-transparent',
 				colorClass,
