--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -17,7 +17,8 @@ import CTA from '@/components/sections/shared/CTA.astro';
 		eyebrow="Ready to Start?"
 		title="Schedule a Call"
 		description="Hop on a quick & easy, no risks, no obligations call with us to see how we can help."
-		class="-translate-y-1/4"
+		class=""
+		layout="vertical"
 	>
 		<div
 			slot="list-items"
@@ -26,11 +27,11 @@ import CTA from '@/components/sections/shared/CTA.astro';
 		</div>
 		<div
 			slot="form"
-			class="w-full rounded-2xl overflow-hidden"
+			class="w-full h-fit overflow-hidden"
 		>
 			<iframe
 				src="https://api.leadconnectorhq.com/widget/booking/wVqUyNTRTAkNiRa1bPTA"
-				style="width: 100%;border:none;overflow-y: scroll;max-height:600px"
+				style="width: 100%;border:none;overflow-y: scroll;"
 				scrolling="no"
 				id="2YLsJZYrXQYyjn9CfuDB_1752561372942"
 			></iframe>
