--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -42,6 +42,7 @@ const contactInfo: Contact[] = [
 		eyebrow="Got Questions?"
 		title="Contact Us"
 		description="We are dedicated to providing exceptional support to ensure your experience with our products & services is seamless. <br><br>Our support team is here to assist you with any queries or issues you may encounter."
+		isContactPage={true}
 	>
 		<div
 			slot="list-items"
@@ -66,12 +67,31 @@ const contactInfo: Contact[] = [
 		</div>
 		<div
 			slot="form"
-			class="w-full h-[300px] bg-gray-200 rounded-lg p-4"
+			class="w-full h-fit overflow-hidden"
 		>
-			FORM
+			<iframe
+				src="https://api.leadconnectorhq.com/widget/form/DPgVyelrIJzLsRjld3cF"
+				style="width:100%;height:100%;border:none;border-radius:4px"
+				id="inline-DPgVyelrIJzLsRjld3cF"
+				data-layout="{'id':'INLINE'}"
+				data-trigger-type="alwaysShow"
+				data-trigger-value=""
+				data-activation-type="alwaysActivated"
+				data-activation-value=""
+				data-deactivation-type="neverDeactivate"
+				data-deactivation-value=""
+				data-form-name="Contact Us"
+				data-height="481"
+				data-layout-iframe-id="inline-DPgVyelrIJzLsRjld3cF"
+				data-form-id="DPgVyelrIJzLsRjld3cF"
+				title="Contact Us"
+			>
+			</iframe>
 		</div>
 	</SubPageHero>
 	<Testimonials />
 	<Portfolio />
 	<CTA />
 </Layout>
+
+<script src="https://link.msgsndr.com/js/form_embed.js"></script>
