increase cta header width

--- a/src/components/sections/shared/CTA.astro
+++ b/src/components/sections/shared/CTA.astro
@@ -13,16 +13,16 @@ import Button from '@/components/ui/buttons/Button.astro';
 			<div
 				class="flex flex-col lg:flex-row lg:items-center lg:justify-between h-full"
 			>
-				<div
-					class="left lg:flex-1 md:max-w-[70%] xl:max-w-[55%] z-10 relative flex flex-col lg:gap-5"
-				>
+				<div class="left lg:flex-1 z-10 relative flex flex-col lg:gap-5">
 					<div class="flex flex-col gap-3 mb-6">
-						<h2 class="heading-l2 capitalize">
+						<h2
+							class="heading-l2 capitalize md:max-w-[80%] lg:max-w-[70%] xl:max-w-[65%]"
+						>
 							Turn your website into a sales machine
 						</h2>
-						<p class="wsl-text-lg">
+						<p class="wsl-text-lg md:max-w-[360px] text-wrap lg:max-w-[500px]">
 							We help construction pros land more jobs with smart websites,
-							automations, and local SEO.s
+							automations, and local SEO.
 						</p>
 					</div>
 					<Button
