add alternating bg colors to section on home page

--- a/src/components/sections/shared/Testimonials.astro
+++ b/src/components/sections/shared/Testimonials.astro
@@ -56,6 +56,7 @@ const {
 <SectionContainer
 	title={title}
 	subtitle={subtitle}
+	backgroundColor="bg-gray-100"
 >
 	<div class="portfolio-card-group flex flex-wrap justify-center gap-5">
 		{
