--- a/src/components/sections/home/ExtraServices.astro
+++ b/src/components/sections/home/ExtraServices.astro
@@ -69,6 +69,7 @@ const {
 <SectionContainer
 	title={title}
 	subtitle={subtitle}
+	backgroundColor="bg-gray-100"
 >
 	<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 lg:gap-10">
 		{
