--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -89,7 +89,7 @@ const contactInfo: Contact[] = [
 			</iframe>
 		</div>
 	</SubPageHero>
-	<Testimonials />
+	<Testimonials backgroundColor="bg-gray-50" />
 	<Portfolio />
 	<CTA />
 </Layout>
