--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -37,7 +37,7 @@ import CTA from '@/components/sections/shared/CTA.astro';
 			></iframe>
 		</div>
 	</SubPageHero>
-	<Testimonials />
+	<Testimonials backgroundColor="bg-gray-50" />
 	<Portfolio />
 	<CTA />
 </Layout>
