adjust size of subpages

--- a/src/components/ui/ListItem.astro
+++ b/src/components/ui/ListItem.astro
@@ -8,7 +8,7 @@ const { text = 'placeholder text' } = Astro.props as Props;
 
 <div class={`flex items-center`}>
 	<svg
-		class="w-5 h-5 md:w-6 md:w-6 text-primary-500 mr-2"
+		class="w-5 h-5 md:w-6 md:h-6 text-primary-500 mr-2"
 		fill="currentColor"
 		viewBox="0 0 20 20"
 	>
