--- a/src/components/sections/shared/SubPageHero.astro
+++ b/src/components/sections/shared/SubPageHero.astro
@@ -25,16 +25,22 @@ const layoutConfig = {
 	horizontal: {
 		container:
 			'gap-10 md:flex-row md:flex-start md:justify-center md:items-start',
-		content: 'md:max-w-1/2 md:pt-30',
+		content: 'md:max-w-1/2 pt-0 md:pt-30',
 	},
 	vertical: {
-		container: ' ',
-		content: 'pt-20 md:w-full',
+		container: '',
+		content: 'md:pt-20 md:w-full lg:pt-28',
 	},
 };
 
+const formConfig = {
+	horizontal: 'lg:pt-8',
+	vertical: 'pt-5 lg:pt-8',
+};
+
 const layoutStyle = layoutConfig[layout];
-const contactPageStyle = isContactPage ? 'min-w-[360px]' : ' ';
+const contactPageStyle = isContactPage ? 'min-w-[360px] lg:min-w-[520px]' : ' ';
+const formStyle = formConfig[layout];
 ---
 
 <section class="relative overflow-hidden">
@@ -60,7 +66,7 @@ const contactPageStyle = isContactPage ? 'min-w-[360px]' : ' ';
 	>
 		<!-- Main Content Area -->
 		<div
-			class={`flex flex-col gap-5 justify-center pt-16 ${className} ${layoutStyle.content}`}
+			class={`flex flex-col gap-5 justify-center mt-20 md:mt-0 ${className} ${layoutStyle.content}`}
 		>
 			<div class="flex flex-col">
 				<span
@@ -84,7 +90,7 @@ const contactPageStyle = isContactPage ? 'min-w-[360px]' : ' ';
 
 		<!-- Form Section  -->
 		<div
-			class={`pb-10 lg:pb-20 !pt-0 w-full min-h-[450px] ${layoutStyle.content} ${contactPageStyle}`}
+			class={`pb-10 lg:pb-20 w-full min-h-[450px] ${contactPageStyle} ${formStyle}`}
 		>
 			<slot name="form" />
 		</div>
