--- a/src/components/sections/shared/SubPageHero.astro
+++ b/src/components/sections/shared/SubPageHero.astro
@@ -92,7 +92,7 @@ const formStyle = formConfig[layout];
 		<div
 			class={`pb-10 lg:pb-20 w-full min-h-[450px] ${contactPageStyle} ${formStyle}`}
 		>
-			<slot name="form" />
+			<slot name="after-content" />
 		</div>
 	</div>
 </section>
