--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -66,7 +66,7 @@ const contactInfo: Contact[] = [
 			}
 		</div>
 		<div
-			slot="form"
+			slot="after-content"
 			class="w-full h-fit overflow-hidden"
 		>
 			<iframe
