--- a/src/pages/schedule-call.astro
+++ b/src/pages/schedule-call.astro
@@ -21,7 +21,7 @@ import CTA from '@/components/sections/shared/CTA.astro';
 		layout="vertical"
 	>
 		<div
-			slot="form"
+			slot="after-content"
 			class="w-full h-fit overflow-hidden"
 		>
 			<iframe
