--- a/src/components/sections/shared/Portfolio.astro
+++ b/src/components/sections/shared/Portfolio.astro
@@ -1,8 +1,9 @@
 ---
 import SectionContainer from './SectionContainer.astro';
 import PortfolioCard from '@/components/ui/cards/PortfolioCard.astro';
-// Image Imports
+import ScrollReveal from '@/components/sections/shared/ScrollReveal.astro';
 
+// Image Imports
 import placeHolderImage from '@/assets/tmp.avif';
 
 type Project = {
@@ -52,16 +53,21 @@ const {
 	headerColor="text-primary-500"
 	textColor="text-gray-200"
 >
-	<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+	<div
+		class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
+		data-group-reveal
+	>
 		{
 			projects.map((project) => (
-				<PortfolioCard
-					title={project.title}
-					description={project.description}
-					image={project.image}
-					href={project.href}
-					class=""
-				/>
+				<ScrollReveal stagger={true}>
+					<PortfolioCard
+						title={project.title}
+						description={project.description}
+						image={project.image}
+						href={project.href}
+						class=""
+					/>
+				</ScrollReveal>
 			))
 		}
 	</div>
