--- a/src/components/sections/shared/Testimonials.astro
+++ b/src/components/sections/shared/Testimonials.astro
@@ -1,6 +1,7 @@
 ---
 import SectionContainer from './SectionContainer.astro';
 import TestimonialCard from '@/components/ui/cards/TestimonialCard.astro';
+import ScrollReveal from '@/components/sections/shared/ScrollReveal.astro';
 
 type Testimonial = {
 	client: string;
@@ -50,7 +51,7 @@ interface Props {
 
 const {
 	title = 'Reviews',
-	subtitle = 'Trusted by industry leaders to take their businesses to the next level',
+	subtitle = 'Trusted by industry leaders to take their businesses to the next level.',
 	backgroundColor = 'bg-gray-100',
 } = Astro.props as Props;
 ---
@@ -60,14 +61,16 @@ const {
 	subtitle={subtitle}
 	backgroundColor={backgroundColor}
 >
-	<div class="portfolio-card-group flex flex-wrap justify-center gap-5">
+	<div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-5">
 		{
 			testimonials.map((testimonial) => (
-				<TestimonialCard
-					client={testimonial.client}
-					review={testimonial.review}
-					class={`grow w-full min-w-[280px] max-w-[600px] lg:max-w-[45%] xl:max-w-[32%]`}
-				/>
+				<ScrollReveal stagger={true}>
+					<TestimonialCard
+						client={testimonial.client}
+						review={testimonial.review}
+						class="w-full"
+					/>
+				</ScrollReveal>
 			))
 		}
 	</div>
