--- a/src/components/ui/navigation/Footer.astro
+++ b/src/components/ui/navigation/Footer.astro
@@ -43,7 +43,11 @@ const companyInfo = [
 	},
 ];
 
-const { footerText } = Astro.props;
+interface Props {
+	footerText: string;
+}
+
+const { footerText } = Astro.props as Props;
 ---
 
 <footer class="bg-gray-700 pb-2 pt-5 lg:pt-10">
