--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import '@/styles/custom-styles.css';
 import '@/styles/global.css';
 import '@/styles/fluid-typography.css';
 import '@/styles/fluid-layouts.css';
+
 // Layout.astro
 import Header from '@/components/ui/navigation/Header.astro';
 import Footer from '@/components/ui/navigation//Footer.astro';
@@ -36,6 +37,10 @@ const {
 			rel="icon"
 			type="image/svg+xml"
 			href="/favicon.svg"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://unpkg.com/aos@next/dist/aos.css"
 		/>
 		<title>{title}</title>
 	</head>
